@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Add hook to skip MDN prompt based on content of message headers.
 [mms] Allow expand/collapse of folders in MIMP.
 [mms] Use single, unified mailbox cache.
 [mms] Add support for setting/retrieving special-use mailboxes from IMAP
